# llm-application-code

agent_framework/: autogen_groupchat.ipynb  autogpt-with-langchain.ipynb  multiagent-collaboration-with-langgraph.ipynb  single-agent-with-langchain.ipynb
fine_tuning/: GenAI_hw5_LLM_finetuning_ipynb.ipynb  Llama_3_1_8b_+_Unsloth_2x_faster_finetuning_+_shiji.ipynb  lora-tuning.ipynb
function_call/: function-call-based-on-langchain.ipynb  function-call-based-on-openai-sdk.ipynb  function-call-with-chat-model.ipynb  weather-function-calling-based-on-langchain.ipynb  weather-function-calling-based-on-openai-sdk.ipynb
langchain_expression_language/: basic-example.ipynb  parallelism-example.ipynb  rag-search-example.ipynb
langserve-app/: pyproject.toml
langserve-app/app/: server.py
retrieval_augmented_generation/: augmented-by-csv.ipynb  rag-helloworld.ipynb
retrieval_augmented_generation/data/: OutdoorClothingCatalog_1000.csv
